Titanic project - Executing KNN, Logistic Regression, RandomForest,SVC, NB and Cross-validation

--- a/titanic/Untitled.ipynb
+++ b/titanic/Untitled.ipynb
@@ -1601,7 +1601,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "submission = pd"
+    "submission = pd.DataFrame({\n",
+    "    'PassengerId': test['PassengerId'],\n",
+    "    'Survived': y_pred\n",
+    "})\n",
+    "submission.to_csv('submission.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
